# aoc-python-2025

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ruff-main.yml  ruff-pr.yml  tests.yml
src/aoc2025/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
src/aoc2025/utils/: __init__.py  benchmark.py  io.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py
